--- a/www/default.css
+++ b/www/default.css
@@ -73,6 +73,13 @@ canvas.measure {
     max-height: 35em;
 }
 
+span.t_gauge {
+    font-style: italic;
+    font-weight: normal;
+    float: right;
+    color: rgb(97, 97, 106);
+}
+
 /*kleine Displays*/
 @media all and (max-width: 45em) {
     h1 {
